--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
           
 
-        <section class="d-flex justify-content-around my-5">
+        <section class="d-flex justify-content-center flex-wrap gap-5 my-5">
             
                 <a href="/DOMJS1/index.html"><div class="index-foto" id="index-foto1"></div></a>
                 <a href="/DOMJS2/index.html"><div class="index-foto" id="index-foto2"></div></a>
