--- a/DOMJS2/index.html
+++ b/DOMJS2/index.html
@@ -18,7 +18,7 @@
   <nav class="print container-fluid bg-body-tertiary me-3 p-3">
     <div class="d-flex align-items-center justify-content-between">
       <div>
-        <img class="logo-cine" src="/DOMJS2/images/Cinesa.png" alt="">
+        <a href="/index.html"><img class="logo-cine" src="/DOMJS2/images/Cinesa.png" alt=""></a>
       </div>
       <form class="d-flex align-items-center">
         <a class="btn btn-outline-dark me-3 p-3" href="/DOMJS1/index.html">Peso Ideal</a>
